cmake_minimum_required(VERSION 3.8)
project(isolette_cpp_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(example_interfaces REQUIRED)

include_directories(include)

add_executable(isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_interface_mrit_exe src/base_code/isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_interface_mrit_runner.cpp src/user_code/isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_interface_mrit_src.cpp src/base_code/isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_interface_mrit_base_src.cpp)
ament_target_dependencies(isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_interface_mrit_exe rclcpp example_interfaces)

add_executable(isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_heat_source_mhst_exe src/base_code/isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_heat_source_mhst_runner.cpp src/user_code/isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_heat_source_mhst_src.cpp src/base_code/isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_heat_source_mhst_base_src.cpp)
ament_target_dependencies(isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_heat_source_mhst_exe rclcpp example_interfaces)

add_executable(isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_mode_mrmt_exe src/base_code/isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_mode_mrmt_runner.cpp src/user_code/isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_mode_mrmt_src.cpp src/base_code/isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_mode_mrmt_base_src.cpp)
ament_target_dependencies(isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_mode_mrmt_exe rclcpp example_interfaces)

add_executable(isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_alarm_mat_exe src/base_code/isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_alarm_mat_runner.cpp src/user_code/isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_alarm_mat_src.cpp src/base_code/isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_alarm_mat_base_src.cpp)
ament_target_dependencies(isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_alarm_mat_exe rclcpp example_interfaces)

add_executable(isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_interface_mmit_exe src/base_code/isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_interface_mmit_runner.cpp src/user_code/isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_interface_mmit_src.cpp src/base_code/isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_interface_mmit_base_src.cpp)
ament_target_dependencies(isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_interface_mmit_exe rclcpp example_interfaces)

add_executable(isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_mode_mmmt_exe src/base_code/isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_mode_mmmt_runner.cpp src/user_code/isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_mode_mmmt_src.cpp src/base_code/isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_mode_mmmt_base_src.cpp)
ament_target_dependencies(isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_mode_mmmt_exe rclcpp example_interfaces)

add_executable(isolette_single_sensor_Instance_operator_interface_oip_oit_exe src/base_code/isolette_single_sensor_Instance_operator_interface_oip_oit_runner.cpp src/user_code/isolette_single_sensor_Instance_operator_interface_oip_oit_src.cpp src/base_code/isolette_single_sensor_Instance_operator_interface_oip_oit_base_src.cpp)
ament_target_dependencies(isolette_single_sensor_Instance_operator_interface_oip_oit_exe rclcpp example_interfaces)

add_executable(isolette_single_sensor_Instance_temperature_sensor_cpi_thermostat_exe src/base_code/isolette_single_sensor_Instance_temperature_sensor_cpi_thermostat_runner.cpp src/user_code/isolette_single_sensor_Instance_temperature_sensor_cpi_thermostat_src.cpp src/base_code/isolette_single_sensor_Instance_temperature_sensor_cpi_thermostat_base_src.cpp)
ament_target_dependencies(isolette_single_sensor_Instance_temperature_sensor_cpi_thermostat_exe rclcpp example_interfaces)

add_executable(isolette_single_sensor_Instance_heat_source_cpi_heat_controller_exe src/base_code/isolette_single_sensor_Instance_heat_source_cpi_heat_controller_runner.cpp src/user_code/isolette_single_sensor_Instance_heat_source_cpi_heat_controller_src.cpp src/base_code/isolette_single_sensor_Instance_heat_source_cpi_heat_controller_base_src.cpp)
ament_target_dependencies(isolette_single_sensor_Instance_heat_source_cpi_heat_controller_exe rclcpp example_interfaces)

install(TARGETS
    isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_interface_mrit_exe
    isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_heat_source_mhst_exe
    isolette_single_sensor_Instance_thermostat_regulate_temperature_manage_regulator_mode_mrmt_exe
    isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_alarm_mat_exe
    isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_interface_mmit_exe
    isolette_single_sensor_Instance_thermostat_monitor_temperature_manage_monitor_mode_mmmt_exe
    isolette_single_sensor_Instance_operator_interface_oip_oit_exe
    isolette_single_sensor_Instance_temperature_sensor_cpi_thermostat_exe
    isolette_single_sensor_Instance_heat_source_cpi_heat_controller_exe
    DESTINATION lib/${PROJECT_NAME}
)

ament_package()
