cmake_minimum_required(VERSION 3.8)
project(pca_system_cpp_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(pca_system_cpp_pkg_interfaces REQUIRED)

include_directories(include)

add_executable(wrap_pca_imp_Instance_pump_safety_alarm_process_alarm_thr_exe src/base_code/wrap_pca_imp_Instance_pump_safety_alarm_process_alarm_thr_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_safety_alarm_process_alarm_thr_src.cpp src/base_code/wrap_pca_imp_Instance_pump_safety_alarm_process_alarm_thr_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_safety_alarm_process_alarm_thr_exe rclcpp pca_system_cpp_pkg_interfaces)

add_executable(wrap_pca_imp_Instance_pump_safety_alarm_process_flow_rate_exe src/base_code/wrap_pca_imp_Instance_pump_safety_alarm_process_flow_rate_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_safety_alarm_process_flow_rate_src.cpp src/base_code/wrap_pca_imp_Instance_pump_safety_alarm_process_flow_rate_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_safety_alarm_process_flow_rate_exe rclcpp pca_system_cpp_pkg_interfaces)

add_executable(wrap_pca_imp_Instance_pump_operation_operation_process_drug_library_exe src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_drug_library_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_operation_operation_process_drug_library_src.cpp src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_drug_library_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_operation_operation_process_drug_library_exe rclcpp pca_system_cpp_pkg_interfaces)

add_executable(wrap_pca_imp_Instance_pump_operation_operation_process_event_logger_exe src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_event_logger_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_operation_operation_process_event_logger_src.cpp src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_event_logger_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_operation_operation_process_event_logger_exe rclcpp pca_system_cpp_pkg_interfaces)

add_executable(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_boss_exe src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_boss_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_boss_src.cpp src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_boss_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_boss_exe rclcpp pca_system_cpp_pkg_interfaces)

add_executable(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_rate_controller_exe src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_rate_controller_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_rate_controller_src.cpp src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_rate_controller_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_rate_controller_exe rclcpp pca_system_cpp_pkg_interfaces)

add_executable(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_prescription_checker_exe src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_prescription_checker_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_prescription_checker_src.cpp src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_prescription_checker_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_prescription_checker_exe rclcpp pca_system_cpp_pkg_interfaces)

add_executable(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_ice_thread_exe src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_ice_thread_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_ice_thread_src.cpp src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_ice_thread_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_ice_thread_exe rclcpp pca_system_cpp_pkg_interfaces)

add_executable(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_max_drug_watcher_exe src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_max_drug_watcher_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_max_drug_watcher_src.cpp src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_max_drug_watcher_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_max_drug_watcher_exe rclcpp pca_system_cpp_pkg_interfaces)

add_executable(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_patient_bolus_checker_exe src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_patient_bolus_checker_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_patient_bolus_checker_src.cpp src/base_code/wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_patient_bolus_checker_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_patient_bolus_checker_exe rclcpp pca_system_cpp_pkg_interfaces)

add_executable(wrap_pca_imp_Instance_pump_operation_security_subsystem_security_process_security_thread_exe src/base_code/wrap_pca_imp_Instance_pump_operation_security_subsystem_security_process_security_thread_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_operation_security_subsystem_security_process_security_thread_src.cpp src/base_code/wrap_pca_imp_Instance_pump_operation_security_subsystem_security_process_security_thread_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_operation_security_subsystem_security_process_security_thread_exe rclcpp pca_system_cpp_pkg_interfaces)

add_executable(wrap_pca_imp_Instance_pump_operation_control_panel_ui_process_ui_thread_exe src/base_code/wrap_pca_imp_Instance_pump_operation_control_panel_ui_process_ui_thread_runner.cpp src/user_code/wrap_pca_imp_Instance_pump_operation_control_panel_ui_process_ui_thread_src.cpp src/base_code/wrap_pca_imp_Instance_pump_operation_control_panel_ui_process_ui_thread_base_src.cpp)
ament_target_dependencies(wrap_pca_imp_Instance_pump_operation_control_panel_ui_process_ui_thread_exe rclcpp pca_system_cpp_pkg_interfaces)

install(TARGETS
    wrap_pca_imp_Instance_pump_safety_alarm_process_alarm_thr_exe
    wrap_pca_imp_Instance_pump_safety_alarm_process_flow_rate_exe
    wrap_pca_imp_Instance_pump_operation_operation_process_drug_library_exe
    wrap_pca_imp_Instance_pump_operation_operation_process_event_logger_exe
    wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_boss_exe
    wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_rate_controller_exe
    wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_prescription_checker_exe
    wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_ice_thread_exe
    wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_max_drug_watcher_exe
    wrap_pca_imp_Instance_pump_operation_operation_process_operation_threads_patient_bolus_checker_exe
    wrap_pca_imp_Instance_pump_operation_security_subsystem_security_process_security_thread_exe
    wrap_pca_imp_Instance_pump_operation_control_panel_ui_process_ui_thread_exe
    DESTINATION lib/${PROJECT_NAME}
)

ament_package()
